--- a/login.css
+++ b/login.css
@@ -24,6 +24,7 @@ a {
   display: flex;
   justify-content: space-between;
   padding: 3px 10px;
+  margin: 20px 100px ;
 }
 
 img {
@@ -49,7 +50,7 @@ footer {
   padding: 100px 40px 40px;
 }
 
-/* Estilo da Página de Login */
+
 h2 {
   color: white;
   text-align: center;
@@ -130,7 +131,7 @@ button {
 }
 
 .config-container {
-  max-width: 600px;
+  max-width: 900px;
   margin: auto;
   background: rgb(0, 0, 0);
   border-radius: 8px;
@@ -198,4 +199,5 @@ img {
     flex-direction: column;
     align-items: center;
   }
+
 }
